--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ main: com.viaversion.viaversion.ViaVersionPlugin
 authors: [ _MylesC, creeper123123321, Gerrygames, kennytv, Matsv, EnZaXD, RK_01 ]
 version: ${version}
 description: ${description}
+website: ${url}
 api-version: 1.13
 folia-supported: true
 loadbefore: [ ProtocolLib ]
