Remove unneeded 1.13 enchantment translatable mappings

--- a/common/src/main/resources/assets/viaversion/data/mapping-lang-1.12-1.13.json
+++ b/common/src/main/resources/assets/viaversion/data/mapping-lang-1.12-1.13.json
@@ -1474,11 +1474,11 @@
   "enchantment.binding_curse": "enchantment.minecraft.binding_curse",
   "enchantment.vanishing_curse": "enchantment.minecraft.vanishing_curse",
   "enchantment.level.1": null,
-  "enchantment.level.2": "potion.potency.1",
-  "enchantment.level.3": "potion.potency.2",
-  "enchantment.level.4": "potion.potency.3",
-  "enchantment.level.5": "potion.potency.4",
-  "enchantment.level.6": "potion.potency.5",
+  "enchantment.level.2": null,
+  "enchantment.level.3": null,
+  "enchantment.level.4": null,
+  "enchantment.level.5": null,
+  "enchantment.level.6": null,
   "enchantment.level.7": null,
   "enchantment.level.8": null,
   "enchantment.level.9": null,
