Rename minimize-cooldown config option to hide-cooldown-indicator
Follow-up PR to https://github.com/ViaVersion/ViaVersion/pull/4006 since the behaviour of the option changed we should also rename it accordingly.

--- a/common/src/main/resources/assets/viaversion/config.yml
+++ b/common/src/main/resources/assets/viaversion/config.yml
@@ -205,7 +205,7 @@ replace-pistons: false
 replacement-piston-id: 0
 # Fix 1.9+ clients not rendering the far away chunks and improve chunk rendering when moving fast (Increases network usage and decreases client fps slightly)
 chunk-border-fix: false
-# Minimize the cooldown animation in 1.8 servers
-minimize-cooldown: true
+# Hides the cooldown indicator when interacting with swords and other tools.
+hide-cooldown-indicator: true
 # Allows 1.9+ left-handedness (main hand) on 1.8 servers
 left-handed-handling: true
