--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,7 @@
 charset = utf-8
 indent_size = 4
 indent_style = space
-insert_final_newline = false
+insert_final_newline = true
 tab_width = 4
 
 [*.java]
