--- a/common/src/main/resources/assets/viaversion/config.yml
+++ b/common/src/main/resources/assets/viaversion/config.yml
@@ -209,3 +209,5 @@ chunk-border-fix: false
 left-handed-handling: true
 # Tries to cancel block break/place sounds sent by 1.8 servers to 1.9+ clients to prevent them from playing twice
 cancel-block-sounds: true
+# Truncate chat messages longer than 100 characters from 1.11+ clients on sub 1.11 servers
+truncate-1_11-chat-messages: true
