Add option to fix wrong block placement rotation in 1.20.5->1.21
A vanilla client would send a full movement packet including position and valid on ground as well but this is enough to fix https://github.com/ViaVersion/ViaVersion/issues/4165 and also doesn't need tons of tracking code.

--- a/common/src/main/resources/assets/viaversion/config.yml
+++ b/common/src/main/resources/assets/viaversion/config.yml
@@ -167,6 +167,9 @@ handle-invalid-item-count: false
 # Hides scoreboard numbers for 1.20.3+ clients on older server versions.
 hide-scoreboard-numbers: false
 #
+# Fixes 1.21+ clients on 1.20.5 servers placing water/lava buckets at the wrong location when moving fast, NOTE: This may cause issues with anti-cheat plugins.
+fix-1_21-placement-rotation: false
+#
 #----------------------------------------------------------#
 #             1.9+ CLIENTS ON 1.8 SERVERS OPTIONS          #
 #----------------------------------------------------------#
