Add config option for 1.20.4->1.20.5 sword blocking fix
Some people might want to disable it since it breaks the sword blocking animation for clients older than 1.21.4

--- a/common/src/main/resources/assets/viaversion/config.yml
+++ b/common/src/main/resources/assets/viaversion/config.yml
@@ -215,3 +215,6 @@ chunk-border-fix: false
 left-handed-handling: true
 # Tries to cancel block break/place sounds sent by 1.8 servers to 1.9+ clients to prevent them from playing twice
 cancel-block-sounds: true
+# If enabled, 1.20.5+ clients will have legitimate sword blocking mechanics on 1.8 servers. Note that you won't be able to see
+# the blocking in first person if the client is older than 1.21.4.
+legitimate-sword-blocking: true
