--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
+      with:
+        persist-credentials: false
     - name: Validate Gradle Wrapper
       uses: gradle/actions/wrapper-validation@v4
     - name: Set up JDK 17
