Enable configuration cache

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,4 @@ velocityVersion=3.4
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
+org.gradle.configuration-cache=true
