--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: ViaVersion
 main: com.viaversion.viaversion.ViaVersionPlugin
 authors: [ _MylesC, creeper123123321, Gerrygames, kennytv, Matsv, EnZaXD, RK_01 ]
-version: ${version}
-description: ${description}
-website: ${url}
+version: "${version}"
+description: "${description}"
+website: "https://viaversion.com"
 api-version: 1.13
 folia-supported: true
 loadbefore: [ ProtocolLib ]
