Migrate the user wiki to GitHub

--- a/common/src/main/resources/assets/viaversion/config.yml
+++ b/common/src/main/resources/assets/viaversion/config.yml
@@ -2,7 +2,7 @@
 # Ensure you look through all these options
 # If you need help:
 # Discord - https://viaversion.com/discord
-# Docs - https://docs.viaversion.com/display/VIAVERSION/Configuration
+# Docs - https://docs.viaversion.com
 #
 #----------------------------------------------------------#
 #                     GLOBAL OPTIONS                       #
