--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ metadata.format.version = "1.1"
 
 gson = "2.11.0"
 fastutil = "8.5.15"
-vianbt = "5.0.1"
+vianbt = "5.1.0-SNAPSHOT"
 mcstructs = "5-2.5.5-SNAPSHOT"
 
 # Common provided
