--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,9 +2,9 @@ metadata.format.version = "1.1"
 
 [versions]
 
-gson = "2.11.0"
+gson = "2.12.1"
 fastutil = "8.5.15"
-vianbt = "5.1.0-SNAPSHOT"
+vianbt = "5.1.0"
 mcstructs = "5-2.5.5-SNAPSHOT"
 
 # Common provided
@@ -12,14 +12,14 @@ netty = "4.0.20.Final"
 guava = "17.0"
 snakeYaml = "2.2"
 
-junit = "5.11.3"
-checkerQual = "3.48.1"
+junit = "5.11.4"
+checkerQual = "3.49.1"
 
 # Platforms
 paper = "1.20.4-R0.1-SNAPSHOT"
 legacyBukkit = "1.8.8-R0.1-SNAPSHOT"
 velocity = "3.1.1"
-viaProxy = "3.3.8-SNAPSHOT"
+viaProxy = "3.4.0-SNAPSHOT"
 
 [libraries]
 
