Error on absent artifacts, Set CI timeout to 30 mins.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ jobs:
     # Only run on PRs if the source branch is on a different repo. We do not need to run everything twice.
     if: ${{ github.event_name != 'pull_request' || github.repository != github.event.pull_request.head.repo.full_name }}
     runs-on: ubuntu-24.04
+    timeout-minutes: 30
     steps:
     - name: Checkout Repository
       uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # 6.0.0
@@ -30,3 +31,4 @@ jobs:
       with:
         name: Artifacts
         path: build/libs/
+        if-no-files-found: error
